# Motion-Planning-and-Control-of-Multi-Arm-Robot-for-In-Orbit-Operations

./: LICENSE  README.md  README_non_git_DO_NOT_USE_THIS.md
gazebo_ros_link_attacher/include/: gazebo_ros_link_attacher.h
gazebo_ros_link_attacher/src/: gazebo_ros_link_attacher.cpp
simplified_df_bot_description/: CMakeLists.txt  package.xml
simplified_df_bot_description/controller/: robot_controllers.yaml
simplified_df_bot_description/include/: main_horizontal_5SRS_3.h
simplified_df_bot_description/launch/: controller.launch  controller_groups.yaml  controller_joints.yaml  controller_utils.launch  display.launch  execute_combined_locomotion.launch  execute_horizontal_locomotion.launch  execute_parallel_locomotion.launch  execute_serial_locomotion.launch  execute_vertical_locomotion.launch  gazebo_combined.launch  gazebo_horizontal.launch  gazebo_parallel.launch  gazebo_serial.launch  gazebo_vertical.launch  mario_urdf.launch
simplified_df_bot_description/meshes/: base_link.stl  link_00_1.stl  link_00__1__1.stl  link_00__2__1.stl  link_01_1.stl  link_01__1__1.stl  link_01__2__1.stl  link_02_1.stl  link_02__1__1.stl  link_02__2__1.stl  link_03_1.stl  link_03__1__1.stl  link_03__2__1.stl  link_04_1.stl  link_04__1__1.stl  link_04__2__1.stl  link_05_1.stl  link_05__1__1.stl  link_05__2__1.stl  link_06_1.stl  link_06__1__1.stl  link_06__2__1.stl
simplified_df_bot_description/models/my_cube_model/: model.config  model.sdf
simplified_df_bot_description/scripts/: actual.py  attach_test.py  attach_test2.py  attachnow.py  control_test_01.py  detachnow.py  mario_control.py  movegrouppythoninterface.py  moveit_demo2.py  subscriber_test_01.py  testing.py  testing2.py
simplified_df_bot_description/src/: exe_combined_coordmotion_1.cpp  exe_horizontal_coordmotion_1.cpp  exe_horizontal_coordmotion_2.cpp  exe_parallel_coordmotion_1.cpp  exe_serial_coordmotion_1.cpp  exe_serial_coordmotion_2.cpp  exe_vertical_coordmotion_1.cpp  main_horizontal_5SRS_1.cpp  main_horizontal_5SRS_2.cpp  main_horizontal_5SRS_3.cpp  main_horizontal_5SRS_4.cpp  main_horizontal_5SRS_5.cpp  main_vertical_6SRS_1.cpp  main_vertical_6SRS_2.cpp  main_vertical_6SRS_3.cpp  main_vertical_6SRS_4.cpp  move_horizontal_5SRS.cpp  move_spiral_square.cpp  moveit_demo.cpp  moveit_demo3.cpp  srs_broadcaster.cpp  tf_listen_move_horizontal_5SRS.cpp  tf_listen_move_horizontal_5SRS_v2.cpp  tf_listen_move_horizontal_5SRS_v3.cpp  tf_move_horizontal_5SRS.cpp
simplified_df_bot_description/urdf/: box.xacro  materials.xacro  simplified_df_bot.gazebo  simplified_df_bot.trans  simplified_df_bot.xacro
simplified_df_bot_description/waypoints/: arm1_square.yaml
simplified_df_bot_description/worlds/: main_world.world
simplified_moveit_config/: CMakeLists.txt  package.xml
simplified_moveit_config/config/: fake_controllers.yaml  gazebo_simplified_df_bot.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  simplified_df_bot.srdf  stomp_planning.yaml
simplified_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
srs_modules_description/meshes/: srs_module.sdf
